samples/_failures_safe/1761729597_9db534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23d69da1.c: In function ‘main’:
./samples/SAFE/__tmp_23d69da1.c:149:5: error: ‘Log’ undeclared (first use in this function)
  149 |     Log
      |     ^~~
./samples/SAFE/__tmp_23d69da1.c:149:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_23d69da1.c:149:8: error: expected ‘;’ at end of input
  149 |     Log
      |        ^
      |        ;
./samples/SAFE/__tmp_23d69da1.c:149:5: error: expected declaration or statement at end of input
  149 |     Log
      |     ^~~
